; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_strv.c_strv_consume_pair.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_strv.c_strv_consume_pair.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @strv_consume_pair(i8*** %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8***, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i8*** %0, i8**** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i8***, i8**** %4, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = call i32 @strv_push_pair(i8*** %8, i8* %9, i8* %10)
  store i32 %11, i32* %7, align 4
  %12 = load i32, i32* %7, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %3
  %15 = load i8*, i8** %5, align 8
  %16 = call i32 @free(i8* %15)
  %17 = load i8*, i8** %6, align 8
  %18 = call i32 @free(i8* %17)
  br label %19

19:                                               ; preds = %14, %3
  %20 = load i32, i32* %7, align 4
  ret i32 %20
}

declare dso_local i32 @strv_push_pair(i8***, i8*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
